Updated build.gradle to include necessary dependencies